# torch-allocators

./: CMakeLists.txt  README.md  c10_c_api.cpp  c10_c_api.h  justfile
THCCachingHostAllocator/: THCCachingHostAllocator.cpp  THCCachingHostAllocator.h
c10/foo/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt
c10/foo/benchmark/: cmake_install.cmake
c10/foo/c10/macros/: cmake_macros.h
c10/foo/test/: cmake_install.cmake
test/: CMakeLists.txt  main.cpp
